crates/data-dict/tests/snapshots/validate_spec__missing_version.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
tables: []
────────────────────────────────────────
error: [Q-1-10]
 --> dict.yaml:1:1
  |
1 | tables: []
  | ^^^^^^^^^^ Missing required property '$version' (must be one of: "0.1.0")
  |
  = help: Add the `$version` property to your YAML document?
